Correct z-index in modal window and tabbar

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ body {
   border-radius: 30.5px 30.5px 0px 0px;
   box-sizing: border-box;
   padding-top: 20px;
-  z-index: 100;
+  z-index: 1;
 }
 .tabbar-shadow {
   position: fixed;
@@ -449,7 +449,7 @@ body {
   box-sizing: border-box;
   padding: 0 20px;
   transform: translateY(100%);
-  z-index: 1;
+  z-index: 2;
 }
 .filter-window_background {
   position: fixed;
@@ -865,12 +865,12 @@ body {
   align-items: center;
   padding: 24px;
 }
-
 .recommendation-block {
   background: linear-gradient(307.43deg, #b8e4ff -36.62%, #c9bcfe 132.73%);
   padding: 20px;
   border-radius: 20px;
   padding-right: 0;
+  margin-bottom: 15px;
 }
 
 .recommendation-block_heading {
@@ -909,11 +909,112 @@ body {
   border-radius: 15px;
   background: white;
   padding: 10px 15px;
-  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.recommendation-block_panel_element1:first-child {
+  margin-left: 0px;
 }
 
 .recommendation-block_panel_name {
   font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  margin: 10px 0;
+  margin-left: 15px;
+}
+
+.recommendation_text {
+  margin: 0;
+  margin-left: 15px;
+}
+
+.menu-points-button {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: none;
+  background-color: #fafafa;
+  background-image: url(../img/points.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.test-item {
+  background: #ffffff;
+  box-shadow: 0px 10px 35px -10px rgba(64, 59, 75, 0.1);
+  border-radius: 20px;
+  padding: 10px 20px;
+  margin-bottom: 15px;
+}
+
+.test-item_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.label_success {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.label_success_text {
+  width: 135px;
+  height: 25px;
+  padding: 5px 5px;
+  background: #ddffe9;
+  border-radius: 10px;
+  color: #0eb990;
+  font-weight: 600;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.label_success_progress {
+  color: #0eb990;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.test-item_column {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  height: 75px;
+}
+
+.label_fail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.label_fail_text {
+  width: 135px;
+  height: 25px;
+  padding: 5px 5px;
+  background: #ffd4e5;
+  border-radius: 10px;
+  color: #ea4c89;
+  font-weight: 600;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.label_fail_progress {
+  color: #ea4c89;
   font-weight: 600;
   font-size: 16px;
 }
